clusters/k3s-cluster/vault/vault.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: vault
  labels:
    app: vault
spec:
  rules:
    - host: vault.jacobbanghart.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 8200
